--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="app_name">Make it Rain!</string>
+    <string name="app_name">Mr. Wonderful\'s App of Money</string>
     <string name="threePointText">+$1000</string>
     <string name="freeThrowText">+$50</string>
     <string name="twoPointText">+$100</string>
     <string name="teamAScore">$0</string>
     <string name="teamBscore">$0</string>
-    <string name="teamBName">Noogle</string>
-    <string name="teamAName">Banana</string>
+    <string name="teamBName">Startup\'s \nBank</string>
+    <string name="teamAName">Kevin\'s \nBank</string>
 </resources>
