--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <resources>
-    <string name="app_name">Mr. Wonderful\'s App of Money</string>
-    <string name="threePointText">+$1000</string>
-    <string name="freeThrowText">+$50</string>
-    <string name="twoPointText">+$100</string>
-    <string name="teamAScore">$0</string>
-    <string name="teamBscore">$0</string>
-    <string name="teamBName">Startup\'s \nBank</string>
-    <string name="teamAName">Kevin\'s \nBank</string>
+    <string name="app_name">25-50-75</string>
+    <string name="add_one_text">+1</string>
+    <string name="freeThrowText">+1</string>
+    <string name="minus_five_text">-5</string>
+    <string name="team_rocket_score_text">50</string>
+    <string name="team_spurs_score_text">50</string>
+    <string name="team_spurs_title">Spurs</string>
+    <string name="team_rocket_title">Rocket</string>
+    <string name="clear_text">Tap to Clear</string>
+    <string name="score_cleared_toast">Score cleared!</string>
 </resources>
